[GEODE-10520] Security : Eliminate DirectBuffer Access to sun.nio.ch Internal Package (#7955)
* refactor: Replace internal JDK DirectBuffer with public API solution

Replace sun.nio.ch.DirectBuffer usage with BufferAttachmentTracker, using only
public Java APIs (WeakHashMap and ByteBuffer).

Changes:
- Created BufferAttachmentTracker: WeakHashMap-based tracker for slice-to-original
  buffer mappings, replacing internal DirectBuffer.attachment() access
- Updated BufferPool: Modified slice creation to record mappings and simplified
  getPoolableBuffer() to use the tracker
- Removed DirectBuffer wrapper: Deleted geode-unsafe DirectBuffer wrapper class
- Updated MemberJvmOptions: Removed SUN_NIO_CH_EXPORT from required JVM options
- Added comprehensive unit tests: BufferAttachmentTrackerTest validates all
  tracker functionality

Benefits:
- Eliminates one JVM module export requirement
- Uses only public Java APIs
- Maintains functionality with automatic memory cleanup via WeakHashMap
- Fully backward compatible

Testing:
- All BufferPool tests pass
- New BufferAttachmentTracker tests pass
- Compilation successful

* Add comprehensive documentation to BufferAttachmentTracker

- Add detailed PMD suppression justification explaining thread-safety
- Document why ConcurrentHashMap is safe for concurrent access
- Explain lock-free operations and atomic guarantees
- Add 7-line comment block explaining mutable static field design choice

* Apply spotless formatting to BufferAttachmentTrackerTest

* fix: Correct buffer pooling to prevent capacity issues in NioEngine

- Fixed acquirePredefinedFixedBuffer() to return full-capacity buffers
  instead of modifying buffer limits before return
- Added BufferAttachmentTracker.removeTracking() in releaseBuffer()
  to properly clean up slice-to-original mappings
- Created non-slicing buffer acquisition methods for NioPlainEngine
  and NioSslEngine which require reusable full-capacity buffers
- Separated buffer acquisition into two use ca